--- a/src/app/dashboard/video-list/video-list.component.html
+++ b/src/app/dashboard/video-list/video-list.component.html
@@ -1,1 +1,50 @@
-<p>video-list works!</p>
+<div class="container">
+	<div class="row">
+		<div class="col s12 m12 l3">
+			<button
+				class="waves-effect waves-light btn"
+				(click)="showAsCards = !showAsCards"
+			>
+				{{ showAsCards ? "Change to List" : "Change to Cards" }}
+			</button>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col s12 m12 l3" *ngIf="showAsCards">
+			<div *ngFor="let video of videos" class="card blue-grey darken-1 row">
+				<div class="card-image waves-effect waves-block waves-light">
+					<img
+						src="/assets/img/Slendy.gif"
+						alt="PretendImg"
+						class="activator"
+					/>
+				</div>
+				<div class="card-content">
+					<span class="card-title activator white-text"
+						>Title: {{ video.title }}
+					</span>
+					<p>Author: {{ video.author }}</p>
+					<p>ID: {{ video.id }}</p>
+				</div>
+				<div *ngFor="let details of video.viewDetails" class="card-reveal">
+					<span class="card-title red-text"
+						>Age: {{ details.age }}<i class="material-icons right">close</i>
+					</span>
+					<p>Location: {{ details.region }}</p>
+					<p>Date: {{ details.date | date: "mediumDate" }}</p>
+				</div>
+			</div>
+		</div>
+		<div class="col s12 m12 l3" *ngIf="!showAsCards">
+			<ul
+				class="row"
+				*ngFor="let video of videos"
+				(click)="selectedVideo = video"
+				[class.highlight]="video === selectedVideo"
+			>
+				<li>Author: {{ video.author }}</li>
+				<li>ID: {{ video.id }}</li>
+			</ul>
+		</div>
+	</div>
+</div>
