Started moving to @Input

--- a/src/app/dashboard/video-dashboard/video-dashboard.component.html
+++ b/src/app/dashboard/video-dashboard/video-dashboard.component.html
@@ -1,4 +1,3 @@
-<p>video-dashboard works!</p>
-<wa-video-list></wa-video-list>
+<wa-video-list [videoList]="dashboardVideos"></wa-video-list>
 <wa-video-player></wa-video-player>
 <wa-stat-filters></wa-stat-filters>
