--- a/src/app/dashboard/video-list/video-list.component.html
+++ b/src/app/dashboard/video-list/video-list.component.html
@@ -11,28 +11,8 @@
 	</div>
 	<div class="row">
 		<div class="col s12 m12 l3" *ngIf="showAsCards">
-			<div *ngFor="let video of videos" class="card blue-grey darken-1 row">
-				<div class="card-image waves-effect waves-block waves-light">
-					<img
-						src="/assets/img/Slendy.gif"
-						alt="PretendImg"
-						class="activator"
-					/>
-				</div>
-				<div class="card-content">
-					<span class="card-title activator white-text"
-						>Title: {{ video.title }}
-					</span>
-					<p>Author: {{ video.author }}</p>
-					<p>ID: {{ video.id }}</p>
-				</div>
-				<div *ngFor="let details of video.viewDetails" class="card-reveal">
-					<span class="card-title red-text"
-						>Age: {{ details.age }}<i class="material-icons right">close</i>
-					</span>
-					<p>Location: {{ details.region }}</p>
-					<p>Date: {{ details.date | date: "mediumDate" }}</p>
-				</div>
+			<div *ngFor="let video of videoList">
+				<wa-video-card [video]="video" class="row"></wa-video-card>
 			</div>
 		</div>
 		<div class="col s12 m12 l6" *ngIf="!showAsCards">
