Finishing out video-player flow

--- a/src/app/dashboard/video-dashboard/video-dashboard.component.html
+++ b/src/app/dashboard/video-dashboard/video-dashboard.component.html
@@ -1,5 +1,6 @@
 <wa-video-list
 	[videoList]="dashboardVideos"
+	[selectedVideo]="selectedVideo"
 	(selectVideo)="setVideo($event)"
 ></wa-video-list>
 <wa-video-player [selectedVideo]="selectedVideo"></wa-video-player>
