--- a/src/app/dashboard/video-player/video-player.component.html
+++ b/src/app/dashboard/video-player/video-player.component.html
@@ -1,1 +1,9 @@
-<wa-video-details [video]="selectedVideo"></wa-video-details>
+<h3>Video Player:</h3>
+<div class="container">
+	<ul class="row">
+		<wa-video-details
+			[video]="selectedVideo"
+			class="s12 m12 l3 dark-grey text-white"
+		></wa-video-details>
+	</ul>
+</div>
